<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home"
        android:contentDescription="@string/nav_home" />
    <item
        android:id="@+id/nav_back"
        android:icon="@android:drawable/ic_media_previous"
        android:title="@string/nav_back"
        android:contentDescription="@string/nav_back" />
    <item
        android:id="@+id/nav_forward"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/nav_forward"
        android:contentDescription="@string/nav_forward" />
    <item
        android:id="@+id/nav_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/nav_refresh"
        android:contentDescription="@string/nav_refresh" />
    <item
        android:id="@+id/nav_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_share"
        android:contentDescription="@string/nav_share" />
</menu>
